# ForensicCopy

./: Cargo.toml  Makefile  README.md  build.rs
docs/: Forensic_Copy.1
scripts/: install_man.sh
src/: copier.rs  errors.rs  hasher.rs  icloud.rs  lib.rs  main.rs  report.rs
