[package]
name = "Forensic_Copy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forensic_copy"
path = "src/main.rs"

[lib]
name = "forensic_copy"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
md-5 = "0.10"
digest = "0.10"
blake3 = { version = "1", features = ["rayon"] }
thiserror = "1"
hex = "0.4"
chrono = "0.4"
rayon = "1"
filetime = "0.2"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }


[target.'cfg(unix)'.dependencies]
xattr = "1"
nix = {version = "0.29", features = ["user", "fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_Foundation" ]}

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"